--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <aside>
             <div class="top">
                 <div class="logo">
-                    <h2>Sup <span>More</span></h2>
+                    <h2>Fax <span class="danger">More</span></h2>
                 </div>
                 <div class="close" id="close-btn">
                     <span class="material-icons-sharp">close</span>
@@ -24,33 +24,43 @@
                     <span class="material-icons-sharp">grid_view</span>
                     <h3>Dashboard</h3>
                 </a>
-                <a href="#">
-                    <span class="material-icons-sharp">grid_view</span>
-                    <h3>Dashboard</h3>
+                <a href="#" class="active">
+                    <span class="material-icons-sharp">person_outline </span>
+                    <h3>Customers
+                    </h3>
                 </a>
                 <a href="#">
-                    <span class="material-icons-sharp">grid_view</span>
-                    <h3>Dashboard</h3>
+                    <span class="material-icons-sharp">receipt_long</span>
+                    <h3>Orders</h3>
                 </a>
                 <a href="#">
-                    <span class="material-icons-sharp">grid_view</span>
-                    <h3>Dashboard</h3>
+                    <span class="material-icons-sharp">insights</span>
+                    <h3>Analytics</h3>
                 </a>
                 <a href="#">
-                    <span class="material-icons-sharp">grid_view</span>
-                    <h3>Dashboard</h3>
+                    <span class="material-icons-sharp">mail_outline</span>
+                    <h3>Messages</h3>
+                    <span class="message-count">28</span>
                 </a>
                 <a href="#">
-                    <span class="material-icons-sharp">grid_view</span>
-                    <h3>Dashboard</h3>
+                    <span class="material-icons-sharp">inventory</span>
+                    <h3>Products</h3>
                 </a>
                 <a href="#">
-                    <span class="material-icons-sharp">grid_view</span>
-                    <h3>Dashboard</h3>
+                    <span class="material-icons-sharp">report_gmailerrorred</span>
+                    <h3>Report</h3>
                 </a>
                 <a href="#">
-                    <span class="material-icons-sharp">grid_view</span>
-                    <h3>Dashboard</h3>
+                    <span class="material-icons-sharp">settings</span>
+                    <h3>Settings</h3>
+                </a>
+                <a href="#">
+                    <span class="material-icons-sharp">add</span>
+                    <h3>Add Products</h3>
+                </a>
+                <a href="#">
+                    <span class="material-icons-sharp">logout</span>
+                    <h3>Log Out</h3>
                 </a>
             </div>
         </aside>
