--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                 </div>
             </div>
             <div class="sales-analytics">
-                <h2>Sales Analytics</h2>
+                <h3>Sales Analytics</h3>
                 <div class="item online">
                     <div class="icon">
                         <span class="material-icons-sharp">shopping_cart</span>
@@ -259,6 +259,38 @@
                         </div>
                         <h5 class="success">+39%</h5>
                         <h3>39889</h3>
+                    </div>
+                </div>
+                <div class="item offline">
+                    <div class="icon">
+                        <span class="material-icons-sharp">local_mall</span>
+                    </div>
+                    <div class="right">
+                        <div class="info">
+                            <h3>Offline Orders</h3>
+                            <small class="text-muted">Last 24 Hours</small>
+                        </div>
+                        <h5 class="danger">-10%</h5>
+                        <h3>809</h3>
+                    </div>
+                </div>
+                <div class="item customers">
+                    <div class="icon">
+                        <span class="material-icons-sharp">person</span>
+                    </div>
+                    <div class="right">
+                        <div class="info">
+                            <h3>New Customers</h3>
+                            <small class="text-muted">Last 24 Hours</small>
+                        </div>
+                        <h5 class="success">+25%</h5>
+                        <h3>999</h3>
+                    </div>
+                </div>
+                <div class="item add-product">
+                    <div>
+                        <span class="material-icons-sharp">add</span>
+                        <h3>Add Product</h3>
                     </div>
                 </div>
             </div>
